--- a/blog-details.html
+++ b/blog-details.html
@@ -127,9 +127,9 @@
     <section id="blog" class="blog">
       <div class="container" data-aos="fade-up">
 
-        <div class="row g-5">
+        <div class="row justify-content-center">
 
-          <div class="col-lg-8">
+          <div class="col-lg-9">
 
             <article class="blog-details">
 
