--- a/internship.html
+++ b/internship.html
@@ -128,7 +128,7 @@
     <section id="blog" class="blog">
       <div class="container" data-aos="fade-up">
 
-        <div class="d-flex align-items-center justify-content-center">
+        <div class="row justify-content-center">
 
           <div class="col-lg-9">
 
@@ -149,22 +149,23 @@
               </div>End meta top -->
 
               <div class="content">
-                <pre style="font-size: large; font-family: Arial, Helvetica, sans-serif;">
-Internships are educational and career development opportunities, providing practical experience in a field
-or discipline. They are structured, short-term, supervised placements often focused around particular tasks 
-or projects with defined timescales. An internship may be compensated, non-compensated or some time may be 
-paid. The internship has to be meaningful and mutually beneficial to the intern and the organization.
-It is important that objectives and the activities of the internship program are clearly defined and 
-understood.
-Following are the intended objectives of internship training:
-•	 Will expose Technical students to the industrial environment, which cannot be simulated in the classroom 
-and hence creating competent professionals for the industry.
-•	 Provide possible opportunities to learn, understand and sharpen the real time technical / managerial skills
-required at the job.
-•	 Exposure to the current technological developments relevant to the subject area of training.
-•	 Experience gained from the ‘Industrial Internship’ in classroom will be used in classroom discussions.
-•	 Create conditions conducive to quest for knowledge and its applicability on the job.
-                </pre>
+                <p style="font-size: large; font-family: Arial, Helvetica, sans-serif;">
+<p>Internships are educational and career development opportunities, providing practical experience in a field
+  or discipline. They are structured, short-term, supervised placements often focused around particular tasks 
+  or projects with defined timescales. An internship may be compensated, non-compensated or some time may be 
+  paid. The internship has to be meaningful and mutually beneficial to the intern and the organization.
+  It is important that objectives and the activities of the internship program are clearly defined and 
+  understood.</p>                  
+
+<p>Following are the intended objectives of internship training:</p>
+<li style="text-align: left;">Will expose Technical students to the industrial environment, which cannot be simulated in the classroom 
+  and hence creating competent professionals for the industry.</li>
+  <li style="text-align: left;">Provide possible opportunities to learn, understand and sharpen the real time technical / managerial skills
+required at the job.</li>
+<li style="text-align: left;">Exposure to the current technological developments relevant to the subject area of training.</li>
+<li style="text-align: left;">Experience gained from the ‘Industrial Internship’ in classroom will be used in classroom discussions.</li>
+<li style="text-align: left;">Create conditions conducive to quest for knowledge and its applicability on the job.</li>
+                </p>
 
                 <!-- <p>
                   Sit repellat hic cupiditate hic ut nemo. Quis nihil sunt non reiciendis. Sequi in accusamus harum vel aspernatur. Excepturi numquam nihil cumque odio. Et voluptate cupiditate.
@@ -183,30 +184,30 @@ required at the job.
                 </p> -->
 
                 <h3>AICTE INTERNSHIP POLICY: GUIDELINES & PROCEDURES                </h3>
-                <pre style="font-size: large; font-family: Arial, Helvetica, sans-serif;" >
-•	 Learn to apply the Technical knowledge in real industrial situations.
-•	 Gain experience in writing Technical reports/projects.
-•	 Expose students to the engineer’s responsibilities and ethics.
-•	 Familiarize with various materials, processes, products and their applications along with relevant 
-aspects of quality control.
-•	 Promote academic, professional and/or personal development.
-•	 Expose the students to future employers.
-•	 Understand the social, economic and administrative considerations that influence the working 
-environment of industrial organizations
-•	 Understand the psychology of the workers and their habits, attitudes and approach to problem 
-solving.                </pre>
+                <p style="font-size: large; font-family: Arial, Helvetica, sans-serif;" >
+<li>Learn to apply the Technical knowledge in real industrial situations.</li>	 
+<li>Gain experience in writing Technical reports/projects.</li>	 
+<li>Expose students to the engineer’s responsibilities and ethics.</li>	 
+<li>Familiarize with various materials, processes, products and their applications along with relevant 
+  aspects of quality control.</li>	 
+<li>Promote academic, professional and/or personal development.</li>	 
+<li>Expose the students to future employers.</li>	 
+<li>Understand the social, economic and administrative considerations that influence the working 
+  environment of industrial organizations</li>	 
+<li>Understand the psychology of the workers and their habits, attitudes and approach to problem 
+  solving.</li>	                 </p>
                 <img src="assets/img/blog/blog-recent-5.jpg" class="img-fluid" alt="">
 
                 <h3>TIPS FROM SENIORS</h3>
-                <pre style="font-size: large; font-family: Arial, Helvetica, sans-serif;">
+                <p style="font-size: large; font-family: Arial, Helvetica, sans-serif;">
 It is important that we undergo a minimum of 6 weeks of internship.
 So, to avoid the hassle at the end, try to complete your internships starting from the 
 vacation of 2nd year.
-                </pre>
-                <pre style="font-size: large; font-family: Arial, Helvetica, sans-serif;">
+                </p>
+                <p style="font-size: large; font-family: Arial, Helvetica, sans-serif;">
  Note that every period of internship should be a minimum of 2 weeks.
  And try to contact your faculty regarding the details of online interships.
-                </pre>
+                </p>
 
               </div><!-- End post content -->
 
