--- a/index.html
+++ b/index.html
@@ -384,7 +384,7 @@
               <span>ECE PEC 2024</span>
               <div class="social">
                 <a href="https://twitter.com/kambuuusss"><i class="bi bi-twitter"></i></a>
-                <a href="https://www.facebook.com/rkeerthivasan1/"><i class="bi bi-facebook"></i></a>
+                <a href="https://www.facebook.com/kamboos.lok/"><i class="bi bi-facebook"></i></a>
                 <!-- <a href=""><i class="bi bi-instagram"></i></a> -->
                 <a href="https://www.linkedin.com/in/kamlesh-kumar-b428251b5/" target="_blank"><i class="bi bi-linkedin"></i></a>
               </div>
