--- a/q&a.html
+++ b/q&a.html
@@ -108,7 +108,7 @@
             <div class="col-lg-6 text-center">
               <h2>Q&A</h2>
               <p>Ask your questions and get the answers from the seniors.</p>
-              <p>Tip: Use "crtl + f" to search into Questons</p>
+              <p>Tip: Use "crtl + f" to search into Questions</p>
             </div>
           </div>
         </div>
